adding the description of the product into the bidroom